--- a/styles/main.css
+++ b/styles/main.css
@@ -8,6 +8,7 @@ body {
 	background-repeat: no-repeat !important;
 	background-attachment: fixed;
 	color: #FFFFFF;
+	padding-bottom: 80px;
 }
 
 body,
@@ -67,4 +68,20 @@ a {
 	height: 32px;
 	width: 32px;
 	vertical-align: text-bottom;
+}
+
+.info_block {
+	clear:both;
+	margin: 0 10% 0 10%;
+	padding: 100px 0 10px 0;
+}
+
+.info_block .info_header {
+	font-size: 28;
+	font-weight: 500;
+	padding-bottom: 10px;
+}
+
+.info_block .info_body {
+	font-size: 24;
 }
