--- a/styles/main.css
+++ b/styles/main.css
@@ -4,8 +4,8 @@ body {
 	-moz-background-size: cover;
 	-webkit-background-size: cover;
 	background-size: cover;
-	background-position: top center !important;
-	background-repeat: no-repeat !important;
+	background-position: top center;
+	background-repeat: no-repeat;
 	background-attachment: fixed;
 	color: #FFFFFF;
 	padding-bottom: 80px;
@@ -72,23 +72,23 @@ a {
 
 .info_block {
 	clear:both;
-	margin: 0 10% 0 10%;
+	margin: 0 10% 0 20%;
 	padding: 100px 0 10px 0;
 }
 
 .info_block .info_header {
-	font-size: 28;
+	font-size: 20;
 	font-weight: 500;
 	padding-bottom: 10px;
 }
 
 .info_block .info_body {
-	font-size: 24;
+	font-size: 18;
 }
 
 #members {
 	clear:both;
-	margin: 0 10% 0 10%;
+	margin: 0 10% 0 20%;
 	padding: 100px 0 10px 0;
 }
 
@@ -97,21 +97,25 @@ a {
 }
 
 .member_panel .member_header {
-	font-size: 28;
+	font-size: 20;
 	font-weight: 500;
 	padding-bottom: 20px;
 }
 
 .member_panel ul {
+	display: flex;
+	flex-wrap:wrap;
     list-style-type: none;
     margin: 16px 16px 16px 0px;
     padding: 0px;
 }
 
 .member_panel li {
-	display: inline;
-	font-size: 24;
-	margin: 0 32px 0 0px;
+	display: inline-block;
+	font-size: 18;
+	flex-grow: 1;
+	width: calc(100% * (1/3) - 10px - 1px);
+	margin: 0 32px 0 32px;
 	padding: 8px;
 }
 
@@ -120,4 +124,10 @@ a {
 	height: 96px;
 	vertical-align: text-top;
 	padding-right: 16px;
+}
+
+.loader {
+	display: block;
+    margin-left: auto;
+    margin-right: auto ;
 }
