--- a/styles/main.css
+++ b/styles/main.css
@@ -30,8 +30,8 @@ h6 {
   font-weight: 400;
 }
 
-a {
-	text-decoration: none;
+a, a:hover, a:active, a:visited {
+    text-decoration:none;
 }
 
 .nav {
@@ -72,7 +72,7 @@ a {
 
 .info_block {
 	clear:both;
-	margin: 0 10% 0 20%;
+	margin: 0 25% 0 25%;
 	padding: 100px 0 10px 0;
 }
 
@@ -88,18 +88,28 @@ a {
 
 #members {
 	clear:both;
-	margin: 0 10% 0 20%;
+	margin: 0 25% 0 20%;
 	padding: 100px 0 10px 0;
 }
 
 .member_panel {
+	position: absolute;
+	left: 5%;
+	top: 25%;
+	width: 15%;
 	display: inline;
+	border-style: solid;
+	border-width: 5px;
 }
 
 .member_panel .member_header {
 	font-size: 20;
 	font-weight: 500;
 	padding-bottom: 20px;
+	padding-top: 10px;
+	text-align: center;
+	background: #FFFFFF;
+	color: #000000;
 }
 
 .member_panel ul {
@@ -112,16 +122,16 @@ a {
 
 .member_panel li {
 	display: inline-block;
-	font-size: 18;
+	font-size: 14;
 	flex-grow: 1;
-	width: calc(100% * (1/3) - 10px - 1px);
+	width: calc(100% * (1/4) - 0px - 0px);
 	margin: 0 32px 0 32px;
 	padding: 8px;
 }
 
 .member_panel ul li img{
-	width: 96px;
-	height: 96px;
+	width: 48px;
+	height: 48px;
 	vertical-align: text-top;
 	padding-right: 16px;
 }
@@ -129,5 +139,56 @@ a {
 .loader {
 	display: block;
     margin-left: auto;
-    margin-right: auto ;
+    margin-right: auto;
+}
+
+.activity_panel {
+	position: absolute;
+	right: 5%;
+	top: 25%;
+	width: 15%;
+	display: inline;
+	border-style: solid;
+	border-width: 5px;
+}
+
+.activity_panel .activity_header {
+	font-size: 20;
+	font-weight: 500;
+	padding-bottom: 20px;
+	padding-top: 10px;
+	text-align: center;
+	background: #FFFFFF;
+	color: #000000;
+}
+
+.activity_panel ul {
+	display: flex;
+	flex-wrap:wrap;
+    list-style-type: none;
+    margin: 16px 16px 16px 0px;
+    padding: 0px;
+}
+
+.activity_panel ul li img{
+	width: 24px;
+	height: 24px;
+	vertical-align: text-bottom;
+	padding-right: 4px;
+}
+
+
+.activity_panel ul li {
+	display: inline-block;
+	font-size: 16;
+	flex-grow: 1;
+	margin: 0 32px 0 32px;
+	padding: 8px;
+	overflow: hidden;              /* "overflow" value must be different from  visible"*/ 
+    -o-text-overflow: ellipsis;    /* Opera < 11*/
+    text-overflow:    ellipsis;    
+}
+
+.activity_panel li a {	
+	text-decoration: none;
 }
