--- a/styles/main.css
+++ b/styles/main.css
@@ -71,7 +71,7 @@ a, a:hover, a:active, a:visited {
 }
 
 .info_block {
-	clear:both;
+	clear: both;
 	margin: 0 25% 0 25%;
 	padding: 100px 0 10px 0;
 }
@@ -89,12 +89,11 @@ a, a:hover, a:active, a:visited {
 #members {
 	clear:both;
 	margin: 0 25% 0 20%;
-	padding: 100px 0 10px 0;
 }
 
 .member_panel {
 	position: absolute;
-	left: 5%;
+	right: 5%;
 	top: 25%;
 	width: 15%;
 	display: inline;
@@ -143,29 +142,21 @@ a, a:hover, a:active, a:visited {
 }
 
 .activity_panel {
-	position: absolute;
-	right: 5%;
-	top: 25%;
-	width: 15%;
-	display: inline;
-	border-style: solid;
-	border-width: 5px;
+	clear: both;
+	margin: 0 25% 0 25%;
+	padding: 100px 0 10px 0;
 }
 
 .activity_panel .activity_header {
 	font-size: 20;
 	font-weight: 500;
-	padding-bottom: 20px;
-	padding-top: 10px;
-	text-align: center;
-	background: #FFFFFF;
-	color: #000000;
+	padding-bottom: 10px;
 }
 
 .activity_panel ul {
-	display: flex;
-	flex-wrap:wrap;
+	display: inline-block;
     list-style-type: none;
+	width: 75%;
     margin: 16px 16px 16px 0px;
     padding: 0px;
 }
@@ -189,6 +180,6 @@ a, a:hover, a:active, a:visited {
     text-overflow:    ellipsis;    
 }
 
-.activity_panel li a {	
+.activity_panel ul li a {	
 	text-decoration: none;
 }
